[package]
name = "rabbit_hole"
version = "0.1.0"
edition = "2021"
description = "Getting down into the rabbit hole of habbit tracking"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4.10"
rprompt = "1.0.5"
clap = "2.33.0"
open = "1.3.2"
dirs = "2.0.2"
libmath = "0.2.1"
serde_json = "1.0"
colored = "2.0.4"
serde = { version = "1.0.183", features = ["derive"] }
rand = "0.8.4"